--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.31
 click==8.1.7
 requests==2.32.3
-faiss-cpu==1.8.0.post1
+faiss-cpu==1.12.0
 python-dotenv==1.0.1
 pydantic==2.9.2
 pytest==8.3.2
